fixed grid overflow + footer issue

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -14,7 +14,7 @@
 .follow-me{
     display: flex;
     flex-direction: column;
-    width: 10%;
+    width: 100px;
     justify-content: center;
     text-align: center;
 }
